# Bot-Controller

./: .gitignore  Cargo.toml  README.md  build.rs  camsteer.py  config.toml  config.yaml  flyergimbal.py  fysocketserver.py  gimbal-param-diff.py  gimbal-set-motors.py  led-tester.py  led-tester.rs  telemetry.py  todo.txt  udp-poke.py  winch-tester.py
images/: din-alternate.bmfc  din-alternate.fnt
old/: controller.py  flyergimbal.py  led-tester.py  led-tester.rs  winch-tester.py
old/ledshader-rs/: Cargo.toml  README.md
old/ledshader-rs/examples/: opc-blips.rs
old/ledshader-rs/src/: lib.rs  particle.rs
src/: botcomm.rs  bus.rs  config.rs  controller.rs  fygimbal.rs  leds.rs  lib.rs  message.rs  overlay.rs  vecmath.rs  watchdog.rs  wscontrol.rs
src/controller/: draw.rs  gimbal.rs  manual.rs  mod.rs  scheduler.rs  state.rs  timer.rs  velocity.rs  winch.rs
src/fygimbal/: framing.rs  mod.rs  poller.rs  protocol.rs  util.rs
src/html/: index.html
src/interface/: gamepad.rs  metrics.rs  mod.rs  web.rs
src/interface/web/: auth.rs  http.rs  mod.rs  ws.rs
src/led/: animator.rs  apa102.rs  format.rs  interpolate.rs  ledshape.rs  mod.rs  models.rs  shader.rs
web/: index.html  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.js  App.jsx  AuthStatus.css  AuthStatus.jsx  BotChart.jsx  BotConnection.jsx  BotGauge.jsx  BotJSON.jsx  Chart.js  Config.css  Config.jsx  Joystick.css  Joystick.jsx  index.css  index.js
web/src/pages/: Bot.jsx  Camera.jsx  Flyer.jsx  FlyerAnalog.jsx  FlyerMotion.jsx  FlyerSensors.jsx  Gimbal.css  Gimbal.jsx  GimbalInternals.jsx  GimbalSetup.jsx  GimbalStatus.jsx  Home.jsx  Lighting.jsx  LightingColors.jsx  LightingParams.jsx  LightingSchemes.css  LightingSchemes.jsx  Network.jsx  NetworkConsole.css  NetworkConsole.jsx  NetworkModel.css  NetworkModel.jsx  Overlay.jsx  OverlayLayers.jsx  OverlaySetup.jsx  Video.jsx  Vision.jsx  VisionSetup.jsx  VisionStatus.jsx  WinchAll.jsx  WinchCalibrator.jsx  WinchControl.jsx  WinchPID.jsx  WinchSensors.jsx  WinchTiming.jsx  Winches.jsx
