[package]

name = "tucoflyer"
version = "0.1.0"
authors = ["micah"]
license = "MIT"
description = "Control software for a camera robot that hovers on nylon cords"
readme = "README.md"
repository = "https://github.com/TucoFlyer/Bot-Controller"

[dependencies]

gilrs = "0.4.4"
serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"
bincode = "0.8.0"
multiqueue = "0.3.2"
palette = "0.2"
futures = "0.1.14"
byteorder = "1.0.0"
websocket = "0.20.1"
hyper = "0.11.0"
crc16 = "0.3.3"
nom = "3.0.0"
cgmath = "0.14.1"
tokio-proto = "0.1.1"
tokio-core = "0.1.8"
tokio-io = "0.1.2"
tokio-periodic = "0.1"
