[package]

name = "tucoflyer"
version = "0.1.0"
authors = ["micah"]
license = "MIT"
description = "Control software for a camera robot that hovers on nylon cords"
readme = "README.md"
repository = "https://github.com/TucoFlyer/Bot-Controller"

build = "build.rs"

[build-dependencies]
subprocess = "0.1.11"

[dependencies]

serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"
bincode = "0.8.0"

multiqueue = "0.3.2"

gilrs = "0.4.4"
palette = "0.2"
byteorder = "1.0.0"
crc16 = "0.3.3"
nom = "3.0.0"
cgmath = "0.14.1"

rand = "0.3"
qrcode = { git = "https://github.com/kennytm/qrcode-rust", default-features = false }
websocket = "0.20.1"
iron = "0.5.1"
staticfile = "0.4.0"
mount = "0.3.0"
