[package]

name = "tucoflyer"
version = "0.1.0"
authors = ["micah"]
license = "MIT"
description = "Control software for a camera robot that hovers on nylon cords"
readme = "README.md"
repository = "https://github.com/TucoFlyer/Bot-Controller"

build = "build.rs"

[build-dependencies]
subprocess = "0.1.11"

[dependencies]

serde_json = "1.0.2"
serde_derive = "1.0.11"
serde_yaml = "0.7.1"
serde = "1.0.11"
bincode = "0.8.0"
atomicwrites = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }

multiqueue = "0.3.2"

vecmath = "0.3.0"
gilrs = "0.4.4"
num-traits = "0.1.40"

byteorder = "1.0.0"
crc16 = "0.3.3"

rand = "0.3"
hmac = "0.4.2"
sha2 = "0.6.0"
base64 = "0.6.0"

qrcode = { git = "https://github.com/kennytm/qrcode-rust", default-features = false }
websocket = "0.20.1"
iron = "0.5.1"
staticfile = "0.4.0"
mount = "0.3.0"
open = "1.2.0"